# web-lesson

./: .replit  README.md  app.py  pyproject.toml
templates/: home.html  job.html
